@@ -25,17 +25,23 @@ import net.minecraft.util.DyeColor;
 import java.util.List;
 
 /**
- * {@code LoomScreenHandler}.
+ * Обработчик экрана ткацкого станка.
+ * <p>
+ * Принимает знамя, краситель и (опционально) предмет с узором.
+ * Вычисляет список доступных узоров и применяет выбранный при взятии результата.
+ * Максимальное количество слоёв узора на знамени — 6.
  */
 public class LoomScreenHandler extends ScreenHandler {
 
 	private static final int NO_PATTERN = -1;
+	private static final int MAX_BANNER_LAYERS = 6;
 	private static final int INVENTORY_START = 4;
 	private static final int INVENTORY_END = 31;
 	private static final int HOTBAR_START = 31;
 	private static final int HOTBAR_END = 40;
+
 	private final ScreenHandlerContext context;
-	final Property selectedPattern = Property.create();
+	public final Property selectedPattern = Property.create();
 	private List<RegistryEntry<BannerPattern>> bannerPatterns = List.of();
 	Runnable inventoryChangeListener = () -> {};
 	private final RegistryEntryLookup<BannerPattern> bannerPatternLookup;
@@ -44,6 +50,7 @@ public class LoomScreenHandler extends ScreenHandler {
 	private final Slot patternSlot;
 	private final Slot outputSlot;
 	long lastTakeResultTime;
+
 	private final Inventory input = new SimpleInventory(3) {
 		@Override
 		public void markDirty() {
@@ -67,25 +74,25 @@ public class LoomScreenHandler extends ScreenHandler {
 	public LoomScreenHandler(int syncId, PlayerInventory playerInventory, ScreenHandlerContext context) {
 		super(ScreenHandlerType.LOOM, syncId);
 		this.context = context;
-		this.bannerSlot = this.addSlot(new Slot(this.input, 0, 13, 26) {
+		bannerSlot = addSlot(new Slot(input, 0, 13, 26) {
 			@Override
 			public boolean canInsert(ItemStack stack) {
 				return stack.getItem() instanceof BannerItem;
 			}
 		});
-		this.dyeSlot = this.addSlot(new Slot(this.input, 1, 33, 26) {
+		dyeSlot = addSlot(new Slot(input, 1, 33, 26) {
 			@Override
 			public boolean canInsert(ItemStack stack) {
 				return stack.getItem() instanceof DyeItem;
 			}
 		});
-		this.patternSlot = this.addSlot(new Slot(this.input, 2, 23, 45) {
+		patternSlot = addSlot(new Slot(input, 2, 23, 45) {
 			@Override
 			public boolean canInsert(ItemStack stack) {
 				return stack.contains(DataComponentTypes.PROVIDES_BANNER_PATTERNS);
 			}
 		});
-		this.outputSlot = this.addSlot(new Slot(this.output, 0, 143, 57) {
+		outputSlot = addSlot(new Slot(output, 0, 143, 57) {
 			@Override
 			public boolean canInsert(ItemStack stack) {
 				return false;
@@ -95,128 +102,144 @@ public class LoomScreenHandler extends ScreenHandler {
 			public void onTakeItem(PlayerEntity player, ItemStack stack) {
 				LoomScreenHandler.this.bannerSlot.takeStack(1);
 				LoomScreenHandler.this.dyeSlot.takeStack(1);
-				if (!LoomScreenHandler.this.bannerSlot.hasStack() || !LoomScreenHandler.this.dyeSlot.hasStack()) {
-					LoomScreenHandler.this.selectedPattern.set(-1);
+
+				if (!LoomScreenHandler.this.bannerSlot.hasStack()
+						|| !LoomScreenHandler.this.dyeSlot.hasStack()) {
+					LoomScreenHandler.this.selectedPattern.set(NO_PATTERN);
 				}
 
 				context.run((world, pos) -> {
-					long l = world.getTime();
-					if (LoomScreenHandler.this.lastTakeResultTime != l) {
+					long currentTime = world.getTime();
+
+					if (LoomScreenHandler.this.lastTakeResultTime != currentTime) {
 						world.playSound(null, pos, SoundEvents.UI_LOOM_TAKE_RESULT, SoundCategory.BLOCKS, 1.0F, 1.0F);
-						LoomScreenHandler.this.lastTakeResultTime = l;
+						LoomScreenHandler.this.lastTakeResultTime = currentTime;
 					}
 				});
 				super.onTakeItem(player, stack);
 			}
 		});
-		this.addPlayerSlots(playerInventory, 8, 84);
-		this.addProperty(this.selectedPattern);
-		this.bannerPatternLookup = playerInventory.player.getRegistryManager().getOrThrow(RegistryKeys.BANNER_PATTERN);
+		addPlayerSlots(playerInventory, 8, 84);
+		addProperty(selectedPattern);
+		bannerPatternLookup = playerInventory.player.getRegistryManager().getOrThrow(RegistryKeys.BANNER_PATTERN);
 	}
 
 	@Override
 	public boolean canUse(PlayerEntity player) {
-		return canUse(this.context, player, Blocks.LOOM);
+		return canUse(context, player, Blocks.LOOM);
 	}
 
 	@Override
 	public boolean onButtonClick(PlayerEntity player, int id) {
-		if (id >= 0 && id < this.bannerPatterns.size()) {
-			this.selectedPattern.set(id);
-			this.updateOutputSlot(this.bannerPatterns.get(id));
-			return true;
-		}
-		else {
+		if (id < 0 || id >= bannerPatterns.size()) {
 			return false;
 		}
+
+		selectedPattern.set(id);
+		updateOutputSlot(bannerPatterns.get(id));
+		return true;
 	}
 
 	private List<RegistryEntry<BannerPattern>> getPatternsFor(ItemStack stack) {
 		if (stack.isEmpty()) {
-			return this.bannerPatternLookup
+			return bannerPatternLookup
 					.getOptional(BannerPatternTags.NO_ITEM_REQUIRED)
 					.<List<RegistryEntry<BannerPattern>>>map(ImmutableList::copyOf)
 					.orElse(ImmutableList.of());
 		}
-		else {
-			TagKey<BannerPattern> tagKey = stack.get(DataComponentTypes.PROVIDES_BANNER_PATTERNS);
-			return tagKey != null
-			       ? this.bannerPatternLookup
-			         .getOptional(tagKey)
-			         .<List<RegistryEntry<BannerPattern>>>map(ImmutableList::copyOf)
-			         .orElse(ImmutableList.of())
-			       : List.of();
-		}
+
+		TagKey<BannerPattern> tagKey = stack.get(DataComponentTypes.PROVIDES_BANNER_PATTERNS);
+
+		return tagKey != null
+				? bannerPatternLookup
+				.getOptional(tagKey)
+				.<List<RegistryEntry<BannerPattern>>>map(ImmutableList::copyOf)
+				.orElse(ImmutableList.of())
+				: List.of();
 	}
 
 	private boolean isPatternIndexValid(int index) {
-		return index >= 0 && index < this.bannerPatterns.size();
+		return index >= 0 && index < bannerPatterns.size();
 	}
 
+	/**
+	 * Пересчитывает список доступных узоров и обновляет слот результата
+	 * при изменении содержимого входных слотов.
+	 * <p>
+	 * Если знамя или краситель отсутствуют — очищает результат.
+	 * Если узоров ровно один — выбирает его автоматически.
+	 * Если текущий выбранный узор больше не доступен — сбрасывает выбор.
+	 */
 	@Override
 	public void onContentChanged(Inventory inventory) {
-		ItemStack itemStack = this.bannerSlot.getStack();
-		ItemStack itemStack2 = this.dyeSlot.getStack();
-		ItemStack itemStack3 = this.patternSlot.getStack();
-		if (!itemStack.isEmpty() && !itemStack2.isEmpty()) {
-			int i = this.selectedPattern.get();
-			boolean bl = this.isPatternIndexValid(i);
-			List<RegistryEntry<BannerPattern>> list = this.bannerPatterns;
-			this.bannerPatterns = this.getPatternsFor(itemStack3);
-			RegistryEntry<BannerPattern> registryEntry;
-			if (this.bannerPatterns.size() == 1) {
-				this.selectedPattern.set(0);
-				registryEntry = this.bannerPatterns.get(0);
-			}
-			else if (!bl) {
-				this.selectedPattern.set(-1);
-				registryEntry = null;
-			}
-			else {
-				RegistryEntry<BannerPattern> registryEntry2 = list.get(i);
-				int j = this.bannerPatterns.indexOf(registryEntry2);
-				if (j != -1) {
-					registryEntry = registryEntry2;
-					this.selectedPattern.set(j);
-				}
-				else {
-					registryEntry = null;
-					this.selectedPattern.set(-1);
-				}
-			}
+		ItemStack banner = bannerSlot.getStack();
+		ItemStack dye = dyeSlot.getStack();
+		ItemStack patternItem = patternSlot.getStack();
 
-			if (registryEntry != null) {
-				BannerPatternsComponent
-						bannerPatternsComponent =
-						itemStack.getOrDefault(DataComponentTypes.BANNER_PATTERNS, BannerPatternsComponent.DEFAULT);
-				boolean bl2 = bannerPatternsComponent.layers().size() >= 6;
-				if (bl2) {
-					this.selectedPattern.set(-1);
-					this.outputSlot.setStackNoCallbacks(ItemStack.EMPTY);
-				}
-				else {
-					this.updateOutputSlot(registryEntry);
-				}
-			}
-			else {
-				this.outputSlot.setStackNoCallbacks(ItemStack.EMPTY);
-			}
+		if (banner.isEmpty() || dye.isEmpty()) {
+			outputSlot.setStackNoCallbacks(ItemStack.EMPTY);
+			bannerPatterns = List.of();
+			selectedPattern.set(NO_PATTERN);
+			return;
+		}
 
-			this.sendContentUpdates();
+		int currentIndex = selectedPattern.get();
+		boolean wasValid = isPatternIndexValid(currentIndex);
+		List<RegistryEntry<BannerPattern>> previousPatterns = bannerPatterns;
+		bannerPatterns = getPatternsFor(patternItem);
+
+		RegistryEntry<BannerPattern> chosenPattern;
+
+		if (bannerPatterns.size() == 1) {
+			selectedPattern.set(0);
+			chosenPattern = bannerPatterns.get(0);
+		}
+		else if (!wasValid) {
+			selectedPattern.set(NO_PATTERN);
+			chosenPattern = null;
 		}
 		else {
-			this.outputSlot.setStackNoCallbacks(ItemStack.EMPTY);
-			this.bannerPatterns = List.of();
-			this.selectedPattern.set(-1);
+			RegistryEntry<BannerPattern> previouslySelected = previousPatterns.get(currentIndex);
+			int newIndex = bannerPatterns.indexOf(previouslySelected);
+
+			if (newIndex != -1) {
+				chosenPattern = previouslySelected;
+				selectedPattern.set(newIndex);
+			}
+			else {
+				chosenPattern = null;
+				selectedPattern.set(NO_PATTERN);
+			}
 		}
+
+		if (chosenPattern == null) {
+			outputSlot.setStackNoCallbacks(ItemStack.EMPTY);
+			sendContentUpdates();
+			return;
+		}
+
+		BannerPatternsComponent existingLayers = banner.getOrDefault(
+				DataComponentTypes.BANNER_PATTERNS,
+				BannerPatternsComponent.DEFAULT
+		);
+
+		if (existingLayers.layers().size() >= MAX_BANNER_LAYERS) {
+			selectedPattern.set(NO_PATTERN);
+			outputSlot.setStackNoCallbacks(ItemStack.EMPTY);
+		}
+		else {
+			updateOutputSlot(chosenPattern);
+		}
+
+		sendContentUpdates();
 	}
 
 	public List<RegistryEntry<BannerPattern>> getBannerPatterns() {
-		return this.bannerPatterns;
+		return bannerPatterns;
 	}
 
 	public int getSelectedPattern() {
-		return this.selectedPattern.get();
+		return selectedPattern.get();
 	}
 
 	public void setInventoryChangeListener(Runnable inventoryChangeListener) {
@@ -225,102 +248,134 @@ public class LoomScreenHandler extends ScreenHandler {
 
 	@Override
 	public ItemStack quickMove(PlayerEntity player, int slot) {
-		ItemStack itemStack = ItemStack.EMPTY;
-		Slot slot2 = this.slots.get(slot);
-		if (slot2 != null && slot2.hasStack()) {
-			ItemStack itemStack2 = slot2.getStack();
-			itemStack = itemStack2.copy();
-			if (slot == this.outputSlot.id) {
-				if (!this.insertItem(itemStack2, 4, 40, true)) {
-					return ItemStack.EMPTY;
-				}
+		Slot sourceSlot = slots.get(slot);
 
-				slot2.onQuickTransfer(itemStack2, itemStack);
-			}
-			else if (slot != this.dyeSlot.id && slot != this.bannerSlot.id && slot != this.patternSlot.id) {
-				if (itemStack2.getItem() instanceof BannerItem) {
-					if (!this.insertItem(itemStack2, this.bannerSlot.id, this.bannerSlot.id + 1, false)) {
-						return ItemStack.EMPTY;
-					}
-				}
-				else if (itemStack2.getItem() instanceof DyeItem) {
-					if (!this.insertItem(itemStack2, this.dyeSlot.id, this.dyeSlot.id + 1, false)) {
-						return ItemStack.EMPTY;
-					}
-				}
-				else if (itemStack2.contains(DataComponentTypes.PROVIDES_BANNER_PATTERNS)) {
-					if (!this.insertItem(itemStack2, this.patternSlot.id, this.patternSlot.id + 1, false)) {
-						return ItemStack.EMPTY;
-					}
-				}
-				else if (slot >= 4 && slot < 31) {
-					if (!this.insertItem(itemStack2, 31, 40, false)) {
-						return ItemStack.EMPTY;
-					}
-				}
-				else if (slot >= 31 && slot < 40 && !this.insertItem(itemStack2, 4, 31, false)) {
-					return ItemStack.EMPTY;
-				}
-			}
-			else if (!this.insertItem(itemStack2, 4, 40, false)) {
-				return ItemStack.EMPTY;
-			}
-
-			if (itemStack2.isEmpty()) {
-				slot2.setStack(ItemStack.EMPTY);
-			}
-			else {
-				slot2.markDirty();
-			}
-
-			if (itemStack2.getCount() == itemStack.getCount()) {
-				return ItemStack.EMPTY;
-			}
-
-			slot2.onTakeItem(player, itemStack2);
+		if (sourceSlot == null || !sourceSlot.hasStack()) {
+			return ItemStack.EMPTY;
 		}
 
-		return itemStack;
+		ItemStack slotStack = sourceSlot.getStack();
+		ItemStack original = slotStack.copy();
+
+		if (slot == outputSlot.id) {
+			if (!insertItem(slotStack, INVENTORY_START, HOTBAR_END, true)) {
+				return ItemStack.EMPTY;
+			}
+
+			sourceSlot.onQuickTransfer(slotStack, original);
+		}
+		else if (slot == dyeSlot.id || slot == bannerSlot.id || slot == patternSlot.id) {
+			if (!insertItem(slotStack, INVENTORY_START, HOTBAR_END, false)) {
+				return ItemStack.EMPTY;
+			}
+		}
+		else if (slotStack.getItem() instanceof BannerItem) {
+			if (!insertItem(slotStack, bannerSlot.id, bannerSlot.id + 1, false)) {
+				return ItemStack.EMPTY;
+			}
+		}
+		else if (slotStack.getItem() instanceof DyeItem) {
+			if (!insertItem(slotStack, dyeSlot.id, dyeSlot.id + 1, false)) {
+				return ItemStack.EMPTY;
+			}
+		}
+		else if (slotStack.contains(DataComponentTypes.PROVIDES_BANNER_PATTERNS)) {
+			if (!insertItem(slotStack, patternSlot.id, patternSlot.id + 1, false)) {
+				return ItemStack.EMPTY;
+			}
+		}
+		else if (slot >= INVENTORY_START && slot < INVENTORY_END) {
+			if (!insertItem(slotStack, HOTBAR_START, HOTBAR_END, false)) {
+				return ItemStack.EMPTY;
+			}
+		}
+		else if (slot >= HOTBAR_START && slot < HOTBAR_END) {
+			if (!insertItem(slotStack, INVENTORY_START, INVENTORY_END, false)) {
+				return ItemStack.EMPTY;
+			}
+		}
+		else if (!insertItem(slotStack, INVENTORY_START, HOTBAR_END, false)) {
+			return ItemStack.EMPTY;
+		}
+
+		if (slotStack.isEmpty()) {
+			sourceSlot.setStack(ItemStack.EMPTY);
+		}
+		else {
+			sourceSlot.markDirty();
+		}
+
+		if (slotStack.getCount() == original.getCount()) {
+			return ItemStack.EMPTY;
+		}
+
+		sourceSlot.onTakeItem(player, slotStack);
+
+		return original;
 	}
 
 	@Override
 	public void onClosed(PlayerEntity player) {
 		super.onClosed(player);
-		this.context.run((world, pos) -> this.dropInventory(player, this.input));
+		context.run((world, pos) -> dropInventory(player, input));
 	}
 
 	private void updateOutputSlot(RegistryEntry<BannerPattern> pattern) {
-		ItemStack itemStack = this.bannerSlot.getStack();
-		ItemStack itemStack2 = this.dyeSlot.getStack();
-		ItemStack itemStack3 = ItemStack.EMPTY;
-		if (!itemStack.isEmpty() && !itemStack2.isEmpty()) {
-			itemStack3 = itemStack.copyWithCount(1);
-			DyeColor dyeColor = ((DyeItem) itemStack2.getItem()).getColor();
-			itemStack3.apply(
-					DataComponentTypes.BANNER_PATTERNS,
-					BannerPatternsComponent.DEFAULT,
-					component -> new BannerPatternsComponent.Builder().addAll(component).add(pattern, dyeColor).build()
-			);
+		ItemStack banner = bannerSlot.getStack();
+		ItemStack dye = dyeSlot.getStack();
+
+		if (banner.isEmpty() || dye.isEmpty()) {
+			outputSlot.setStackNoCallbacks(ItemStack.EMPTY);
+			return;
 		}
 
-		if (!ItemStack.areEqual(itemStack3, this.outputSlot.getStack())) {
-			this.outputSlot.setStackNoCallbacks(itemStack3);
+		ItemStack result = banner.copyWithCount(1);
+		DyeColor dyeColor = ((DyeItem) dye.getItem()).getColor();
+		result.apply(
+				DataComponentTypes.BANNER_PATTERNS,
+				BannerPatternsComponent.DEFAULT,
+				component -> new BannerPatternsComponent.Builder().addAll(component).add(pattern, dyeColor).build()
+		);
+
+		if (!ItemStack.areEqual(result, outputSlot.getStack())) {
+			outputSlot.setStackNoCallbacks(result);
 		}
 	}
 
 	public Slot getBannerSlot() {
-		return this.bannerSlot;
+		return bannerSlot;
 	}
 
 	public Slot getDyeSlot() {
-		return this.dyeSlot;
+		return dyeSlot;
 	}
 
 	public Slot getPatternSlot() {
-		return this.patternSlot;
+		return patternSlot;
 	}
 
 	public Slot getOutputSlot() {
-		return this.outputSlot;
+		return outputSlot;
 	}
+
+	public boolean canApplyDyePattern() {
+		return !bannerSlot.getStack().isEmpty() && !dyeSlot.getStack().isEmpty();
+	}
+
+	public boolean hasTooManyPatterns() {
+		ItemStack banner = bannerSlot.getStack();
+		if (banner.isEmpty()) {
+			return false;
+		}
+		net.minecraft.component.type.BannerPatternsComponent layers = banner.getOrDefault(
+				net.minecraft.component.DataComponentTypes.BANNER_PATTERNS,
+				net.minecraft.component.type.BannerPatternsComponent.DEFAULT
+		);
+		return layers.layers().size() >= MAX_BANNER_LAYERS;
+	}
+
+	public java.util.List<net.minecraft.registry.entry.RegistryEntry<net.minecraft.block.entity.BannerPattern>> getOutputBannerPatterns() {
+		return bannerPatterns;
+	}
+
 }
